@@ -1,11 +1,8 @@
 /*
- * Translatable strings file generated by Glade.
- * Add this file to your project's POTFILES.in.
- * DO NOT compile it as part of your application.
+ * Chaînes de caractères à traduire générées par
+ * Glade. Ajouter ce fichier au fichier POTFILE.in
+ * de votre projet. NE PAS compiler ce fichier
+ * avec le reste de votre application.
  */
 
-gchar *s = N_("Scanning...");
-gchar *s = N_("Cache is being built.\n"
-              "Please wait...");
 gchar *s = N_("Set ROM version");
-gchar *s = N_("Select new ROM version:");
